city meno - fix header alignment

--- a/assets/css/request.css
+++ b/assets/css/request.css
@@ -65,7 +65,7 @@
 
 .header__nav--desktop {
   position: absolute;
-  right: 5px;
+  right: 17px;
   top: 10px;
   list-style: none;
   display: flex; }
